# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1003 2009/09/21 14:39:41 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/09/21) Fixed bug#4312 - MOTD module for Agent Dashboard, thanks to
    Alexander Scholler!
 - (2009/09/21) Fixed bug#3978 - Better description for PGP passphrases.
 - (2009/09/16) Fixed bug#3932 - Translation enhancements for AdminSession.dtl.
 - (2009/09/16) Fixed bug#2786 - Wrong text labels
    AdminSystemAddressForm.dtl.
 - (2009/09/16) Moved to global event handler Kernel/System/EventHander.pm
    for ticket events (config is compatble with old one).
 - (2009/09/15) Improved performance of the PDF backend.

2.4.5 (2009/??/??)
 - (2009/09/21) Fixed bug#2532 - Problem when setting queues and subqueues to invalid.
 - (2009/09/18) Updated Spanish translation, thanks to Gustavo Azambuja!
 - (2009/09/16) Fixed bug#4288 - 4288: Use of uninitialized value in
    AdminGenericAgent.pm.
 - (2009/09/16) Fixed bug#4292 - "<some@example.com>" in body breaks body on
    ticket split.
 - (2009/09/08) Fixed bug#4255 - RichText is not coupled with RichTextViewing.
    Rich Text is being shown, even if the text/plain MIME part is available.
 - (2009/09/08) Fixed bug#4243 - Adding a key to DefaultTheme HostBased via
    Sysconfig breaks OTRS.
 - (2009/09/08) Fixed bug#4257 - No event based notification is sent on queue
    or state update.
 - (2009/09/08) Fixed bug#4233 - AgentTicketCompose doesn't remember next state
    while attaching a file.
 - (2009/09/08) Fixed bug#4228 - scripts/DBUpdate-to-2.4.pl -
    MigrateCustomerNotification() fails.
 - (2009/09/08) Fixed bug#4232 - SpellChecker Customer-Interface is not
    working.