@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1003 2009/09/21 14:39:41 mg Exp $
+# $Id: CHANGES,v 1.1004 2009/09/21 15:39:55 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.5.0 beta1 (????/??/??)
+ - (2009/09/21) Fixed bug#4218 - No error message when sending mail through not
+    installed sendmail.
  - (2009/09/21) Fixed bug#4312 - MOTD module for Agent Dashboard, thanks to
     Alexander Scholler!
  - (2009/09/21) Fixed bug#3978 - Better description for PGP passphrases.
